--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mini-social": {
+    "spend-monitor": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mini-social",
+            "outputPath": "dist/spend-monitor",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,18 +54,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mini-social:build"
+            "browserTarget": "spend-monitor:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "mini-social:build:production"
+              "browserTarget": "spend-monitor:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mini-social:build"
+            "browserTarget": "spend-monitor:build"
           }
         },
         "test": {
@@ -76,7 +76,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "src/sass/styles.scss"
             ],
             "scripts": [],
             "assets": [
@@ -99,7 +99,7 @@
         }
       }
     },
-    "mini-social-e2e": {
+    "spend-monitor-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -107,11 +107,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "mini-social:serve"
+            "devServerTarget": "spend-monitor:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "mini-social:serve:production"
+              "devServerTarget": "spend-monitor:serve:production"
             }
           }
         },
@@ -127,5 +127,5 @@
       }
     }
   },
-  "defaultProject": "mini-social"
+  "defaultProject": "spend-monitor"
 }
