--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angular-notifier": "^4.1.1",
+    "apexcharts": "^2.1.5",
     "core-js": "^2.5.4",
     "firebase": "^5.5.3",
     "rxjs": "^6.0.0",
